# BH-int2048-2023

./: .gitignore  CMakeLists.txt  gmon.out  xmake.lua
data/: CMakeLists.txt
include/: int2048.h
src/: CMakeLists.txt  int2048.cpp
test/: config.json
test/cases/: 1.py  2.py  3.py
tester/: CMakeLists.txt  config.json  proc.cpp  tester.cpp
tester/cases/: 1.py  2.py  3.py
