cmake_minimum_required(VERSION 3.16)
project(Int2048)
add_subdirectory(src)
add_subdirectory(data)
add_subdirectory(tester)
enable_testing()
add_test(NAME /1/1 COMMAND tester/tester -l /1/1)
add_test(NAME /1/2 COMMAND tester/tester -l /1/2)
add_test(NAME /1/3 COMMAND tester/tester -l /1/3)
add_test(NAME /1/4 COMMAND tester/tester -l /1/4)
add_test(NAME /1/5 COMMAND tester/tester -l /1/5)
add_test(NAME /2/1 COMMAND tester/tester -l /2/1)
add_test(NAME /2/2 COMMAND tester/tester -l /2/2)
add_test(NAME /2/3 COMMAND tester/tester -l /2/3)
add_test(NAME /2/4 COMMAND tester/tester -l /2/4)
add_test(NAME /2/5 COMMAND tester/tester -l /2/5)
add_test(NAME /2/6 COMMAND tester/tester -l /2/6)
add_test(NAME /2/7 COMMAND tester/tester -l /2/7)
add_test(NAME /2/8 COMMAND tester/tester -l /2/8)
add_test(NAME /2/9 COMMAND tester/tester -l /2/9)
add_test(NAME /2/10 COMMAND tester/tester -l /2/10)
add_test(NAME /2/11 COMMAND tester/tester -l /2/11)
add_test(NAME /2/12 COMMAND tester/tester -l /2/12)
add_test(NAME /2/13 COMMAND tester/tester -l /2/13)
add_test(NAME /2/14 COMMAND tester/tester -l /2/14)
add_test(NAME /2/15 COMMAND tester/tester -l /2/15)
add_test(NAME /2/16 COMMAND tester/tester -l /2/16)
add_test(NAME /2/17 COMMAND tester/tester -l /2/17)
add_test(NAME /2/18 COMMAND tester/tester -l /2/18)
add_test(NAME /3/1 COMMAND tester/tester -l /3/1)
add_test(NAME /3/2 COMMAND tester/tester -l /3/2)
add_test(NAME /3/3 COMMAND tester/tester -l /3/3)
set_tests_properties(/1/1 /1/2 /1/3 /1/4 /1/5 PROPERTIES LABELS Interger1)
set_tests_properties(/2/1 /2/2 /2/3 /2/4 /2/5 /2/6 /2/7 /2/8 /2/9 /2/10 /2/11 /2/12 /2/13 /2/14 /2/15 /2/16 /2/17 /2/18 PROPERTIES LABELS Interger2)