set(PROJECT_NAME ${CMAKE_PROJECT_NAME})
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS " -g")
set(ENV{MAKEFLAGS} "-j16")
include_directories(${PROJECT_SOURCE_DIR}/include)
link_directories(${PROJECT_SOURCE_DIR}/src)
add_executable(C1T1 Integer1/1.cpp)
target_link_libraries(C1T1 int2048)
add_executable(C1T2 Integer1/2.cpp)
target_link_libraries(C1T2 int2048)
add_executable(C1T3 Integer1/3.cpp)
target_link_libraries(C1T3 int2048)
add_executable(C1T4 Integer1/4.cpp)
target_link_libraries(C1T4 int2048)
add_executable(C1T5 Integer1/5.cpp)
target_link_libraries(C1T5 int2048)
add_executable(C2T1 Integer2/1.cpp)
target_link_libraries(C2T1 int2048)
add_executable(C2T2 Integer2/2.cpp)
target_link_libraries(C2T2 int2048)
add_executable(C2T3 Integer2/3.cpp)
target_link_libraries(C2T3 int2048)
add_executable(C2T4 Integer2/4.cpp)
target_link_libraries(C2T4 int2048)
add_executable(C2T5 Integer2/5.cpp)
target_link_libraries(C2T5 int2048)
add_executable(C2T6 Integer2/6.cpp)
target_link_libraries(C2T6 int2048)
add_executable(C2T7 Integer2/7.cpp)
target_link_libraries(C2T7 int2048)
add_executable(C2T8 Integer2/8.cpp)
target_link_libraries(C2T8 int2048)
add_executable(C2T9 Integer2/9.cpp)
target_link_libraries(C2T9 int2048)
add_executable(C2T10 Integer2/10.cpp)
target_link_libraries(C2T10 int2048)
add_executable(C2T11 Integer2/11.cpp)
target_link_libraries(C2T11 int2048)
add_executable(C2T12 Integer2/12.cpp)
target_link_libraries(C2T12 int2048)
add_executable(C2T13 Integer2/13.cpp)
target_link_libraries(C2T13 int2048)
add_executable(C2T14 Integer2/14.cpp)
target_link_libraries(C2T14 int2048)
add_executable(C2T15 Integer2/15.cpp)
target_link_libraries(C2T15 int2048)
add_executable(C2T16 Integer2/16.cpp)
target_link_libraries(C2T16 int2048)
add_executable(C2T17 Integer2/17.cpp)
target_link_libraries(C2T17 int2048)
add_executable(C2T18 Integer2/18.cpp)
target_link_libraries(C2T18 int2048)